--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Welcome to my Unreal Engine 5 projects page on this page you will find all the Unreal Engine 5 projects I have done so far. Feel Free to check out the video below showcasing the game.</p>
 						<h3>[1]Game Project: BLUDGEONED DUNGEON Unreal Engine</h3>
                             <p> Role: Gameplay Programmer/QA Tester/UI Design, Language/Engine: C++ Unreal Engine 5 + Blueprints. About: A first person 3D Game where the player must solve puzzles and find clues to escape a dungeon while running from a frenzied beast. This project was a group project developed as part of a University assignment. The main objective being communication and collaborative working.<br> Check out the video below:</p>
-							<iframe width="496" height="255" src="https://www.youtube-nocookie.com/embed/ELlxU6IAa1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<iframe width="100%" height="290" src="https://www.youtube-nocookie.com/embed/ELlxU6IAa1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</article>
 
 
@@ -71,12 +71,12 @@
 								 <p>Welcome to my Unity projects page on this page you will find all the Unity projects I have done so far. Feel Free to check out the videos below showcasing the games.</p>
 								<h3>[1]Game Project: Galaxy Blast Unity</h3>
 								<p>Role: Gameplay Programmer, Language/Engine: C# Unity. About: A 2D Space shooter game where you must find and destroy enemy ships. Save the universe and protect it against the evil force. This game was developed as the part of the Global Game JAM 2022. <br>Check out the video below:</p>
-													<video width="500" controls>
+													<video width="100%" controls>
         <source src="Galaxy Blast.mp4" type="video/mp4">
 			</video>
                                 <h3>[2]Game Project: Zombie Shooter Unity</h3>
                                 <p>Role: Gameplay Programmer, Language/Engine: C# Unity. About: A 2D Zombie shooter where you have to fight and kill off zombies. The game was development part of my University assignment. <br>Check out the video below:</p>
-															<video width="500" controls>
+															<video width="100%" controls>
         <source src="Zombie shooter polybius video 1D.mp4" type="video/mp4">
 			</video>
 					
