--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#Home">Home</a></li>
-								<li><a href="#Projects2">Unreal Engine</a></li>
+								<li><a href="#Projects2">Unreal Engine/C++</a></li>
 								<li><a href="#Projects">Unity</a></li>
 								<li><a href="#About">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -49,7 +49,8 @@
 								
 								<span class="image main"><img src="images/pics03.jpg" alt="" /></span>
 						
-								<p>Hi, my name is Yaseen Malik, and I am a Gameplay Programmer specialising in Object-Oriented Programming in C++/C# and in Unreal Engine 5 and Unity. I am currently studying Computer Games Development in the University of Bedfordshire. <br>And on this page I will give you an insight of the projects I have done so far. Feel free to check out my projects.</p>
+								<p>Hi, my name is Yaseen Malik, I am a Gameplay Programmer as well as a graduate in Computer Games Development. with expertise in Object-Oriented Design and proficiency in C++/C# programming languages. Skilled in leveraging Unreal Engine and Unity to create immersive gaming 
+								experiences. I mostly work in Unreal Engine I am interested in combat developement for example weapons such as swords, guns and some melee combat as well as character movement<br>And on this page I will give you an insight of the projects I have done so far. Feel free to check out my projects.</p>
 	
 							</article>
 	
@@ -58,9 +59,18 @@
 								<h2 class="major">Unreal Engine</h2>							
 								<span class="image main"><img src="images/pics02.jpg" alt="" /></span>
         <p>Welcome to my Unreal Engine 5 projects page on this page you will find all the Unreal Engine 5 projects I have done so far. Feel Free to check out the video below showcasing the game.</p>
-						<h3>[1]Game Project: BLUDGEONED DUNGEON Unreal Engine</h3>
-                            <p> Role: Gameplay Programmer/QA Tester/UI Design, Language/Engine: C++ Unreal Engine 5 + Blueprints. About: A first person 3D Game where the player must solve puzzles and find clues to escape a dungeon while running from a frenzied beast. This project was a group project developed as part of a University assignment. The main objective being communication and collaborative working.<br> Check out the video below:</p>
-							<iframe width="100%" height="290" src="https://www.youtube-nocookie.com/embed/ELlxU6IAa1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		                <h3>[1]Game Project: Simple Shooter</h3>
+						<p>UE5 C++ & Blueprints. This game includes player movement with animations, gun mechanics - particle effect and the gun moves where every the player aims. 
+						also this game includes HUD with a health bar and aim icon. <br>This video includes some code and gameplay:</p>
+						<video width="100%" controls>
+        <source src="unreal engine 5 simple shooter game.mp4" type="video/mp4">
+			</video>
+			<!--<h3>[2]Obstacle Assault</h3>--!>
+			<h3>[2]Warehouse Wreckage</h3>
+			<p>UE5 Blueprints. In this game you must knock over as many barrels and crates as possible before the timer runs. Additionally this game is fully developed using Blueprints.<br>This video includes some gameplay:</p>
+			<video width="100%" controls>
+        <source src="Warehouse wreckage.mp4" type="video/mp4">
+			</video>
 							</article>
 
 
@@ -70,12 +80,12 @@
 								<span class="image main"><img src="images/pics02.jpg" alt="" /></span>
 								 <p>Welcome to my Unity projects page on this page you will find all the Unity projects I have done so far. Feel Free to check out the videos below showcasing the games.</p>
 								<h3>[1]Game Project: Galaxy Blast Unity</h3>
-								<p>Role: Gameplay Programmer, Language/Engine: C# Unity. About: A 2D Space shooter game where you must find and destroy enemy ships. Save the universe and protect it against the evil force. This game was developed as the part of the Global Game JAM 2022. <br>Check out the video below:</p>
+								<p>C# Unity. About: A 2D Space shooter game where you must find and destroy enemy ships. Save the universe and protect it against the evil force. This game was developed as the part of the Global Game JAM 2022. <br>Check out the video below:</p>
 													<video width="100%" controls>
         <source src="Galaxy Blast.mp4" type="video/mp4">
 			</video>
                                 <h3>[2]Game Project: Zombie Shooter Unity</h3>
-                                <p>Role: Gameplay Programmer, Language/Engine: C# Unity. About: A 2D Zombie shooter where you have to fight and kill off zombies. The game was development part of my University assignment. <br>Check out the video below:</p>
+                                <p>Engine: C# Unity. About: A 2D Zombie shooter where you have to fight and kill off zombies. The game was development part of my University assignment. <br>Check out the video below:</p>
 															<video width="100%" controls>
         <source src="Zombie shooter polybius video 1D.mp4" type="video/mp4">
 			</video>
@@ -122,10 +132,8 @@ My software skills are:
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/Ym7865" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="http://www.linkedin.com/in/yaseen-malik-2b359b2b2" class="icon brands fa-LinkedIn"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
@@ -187,10 +195,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="http://www.linkedin.com/in/yaseen-malik-2b359b2b2" class="icon brands fa-LinkedIn"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/Ym7865" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
