--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 						<p>UE5 C++ & Blueprints. This game includes player movement with animations, gun mechanics - particle effect and the gun moves where every the player aims. 
 						also this game includes HUD with a health bar and aim icon. <br>This video includes some code and gameplay:</p>
 						<video width="100%" controls>
-        <source src="unreal engine 5 simple shooter game.mp4" type="video/mp4">
+        <source src="Unreal Engine 5 Simple Shooter Game.mp4" type="video/mp4">
 			</video>
 			<!--<h3>[2]Obstacle Assault</h3>--!>
 			<h3>[2]Warehouse Wreckage</h3>
 			<p>UE5 Blueprints. In this game you must knock over as many barrels and crates as possible before the timer runs. Additionally this game is fully developed using Blueprints.<br>This video includes some gameplay:</p>
 			<video width="100%" controls>
-        <source src="Warehouse wreckage.mp4" type="video/mp4">
+        <source src="Warehouse Wreckage.mp4" type="video/mp4">
 			</video>
 							</article>
 
