--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 	
 						<!-- Projects Unreal Engine -->
 							<article id="Projects2">
-								<h2 class="major">Unreal Engine</h2>							
+								<h2 class="major">Unreal Engine/C++</h2>							
 								<span class="image main"><img src="images/pics02.jpg" alt="" /></span>
         <p>Welcome to my Unreal Engine 5 projects page on this page you will find all the Unreal Engine 5 projects I have done so far. Feel Free to check out the video below showcasing the game.</p>
-		                <h3>[1]Game Project: Simple Shooter</h3>
-						<p>UE5 C++ & Blueprints. This game includes player movement with animations, gun mechanics - particle effect and the gun moves where every the player aims. 
+		                <h3>[1]Simple Shooter</h3>
+						<p>UE5 C++ & Blueprints. This game includes player movement with animations, gun mechanics - particle effect and the gun moves where ever the player aims. 
 						also this game includes HUD with a health bar and aim icon. <br>This video includes some code and gameplay:</p>
 						<video width="100%" controls>
         <source src="Unreal Engine 5 Simple Shooter Game.mp4" type="video/mp4">
@@ -71,6 +71,20 @@
 			<video width="100%" controls>
         <source src="Warehouse Wreckage.mp4" type="video/mp4">
 			</video>
+			
+			
+			<h3>[3]ToonTanks</h3>
+			<p>UE5 C++ & Blueprints. A tank game where you must destroy the turrets or targets and avoid the enemy cannons. Once everything is destroyed you win and if not its game over.<br>This video includes some gameplay:</p>
+			<video width="100%" controls>
+        <source src="Tank Game.mp4" type="video/mp4">
+			</video>
+			
+			<h3>[4]Dapper Dasher</h3>
+			<p>C++ raylib. This game is a runner game where you must avoid the obstacles (nebula) until you reach the end of the level where it says you win. If you hit the obstacle it says game over. This game is fully developed in C++ using the raylib software development library.<br>This video includes some gameplay:</p>
+			<video width="100%" controls>
+        <source src="DapperDasher.mp4" type="video/mp4">
+			</video>
+			
 							</article>
 
 
@@ -96,12 +110,13 @@
 							<article id="About">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pics01.jpg" alt="" /></span>
-								<p>At a very young age I have always been interested in the process of game development and how they managed to create amazing games such as Crash bandicoot, Assassins Creed and much more. My goals are to make games fun as possible with fantastic gameplay mechanics, as well as build up my network to get more connections and expand the chances of getting an excellent job.
-                             <br>In my spare time I love to play games and I love to go to events such as gaming expos and conferences. if you want to learn more about me feel free contact me via Email or LinkedIn.</p>
+								<p>From a young age, I've been fascinated by game development, particularly how studios create immersive experiences like Crash Bandicoot and Assassin's Creed. My goal is to develop engaging games with compelling mechanics, while also building my professional network to increase my career opportunities.  In my free time, I enjoy gaming and attending industry events like expos and conferences.  <br>Feel free to connect with me via email or LinkedIn to learn more..</p>
 							 <p>I am very task driven and I am always looking for opportunities to improve my skills even further.
-My software skills are:
+<br>My skills are:
 <br>•	Unreal Engine 5
+<br>•	C++
 <br>•	Unity
+<br>•	C#
 <br>•	GitHub
 <br>•	Photoshop CC
 <br>•	Premiere Pro </p>
