--- a/index.html
+++ b/index.html
@@ -59,28 +59,36 @@
 								<h2 class="major">Unreal Engine/C++</h2>							
 								<span class="image main"><img src="images/pics02.jpg" alt="" /></span>
         <p>Welcome to my Unreal Engine 5 projects page on this page you will find all the Unreal Engine 5 projects I have done so far. Feel Free to check out the video below showcasing the game.</p>
-		                <h3>[1]Simple Shooter</h3>
+		
+		  <h3>[1]Slash</h3>
+						<p>UE5 C++ & Blueprints. 3rd Person RPG Open World Game which includes 3rd Person Player Movement, Sword Combat, Souls, HP bar, Stamina bar, Breakable objects with treasure in it and different types of Enemies with different attributes.
+						<br>This video includes some gameplay:</p>
+						<video width="100%" controls>
+        <source src="Slash Game Showcase.mp4" type="video/mp4">
+			</video>
+			
+		                <h3>[2]Simple Shooter</h3>
 						<p>UE5 C++ & Blueprints. This game includes player movement with animations, gun mechanics - particle effect and the gun moves where ever the player aims. 
 						also this game includes HUD with a health bar and aim icon. <br>This video includes some code and gameplay:</p>
 						<video width="100%" controls>
         <source src="Unreal Engine 5 Simple Shooter Game.mp4" type="video/mp4">
 			</video>
 			<!--<h3>[2]Obstacle Assault</h3>--!>
-			<h3>[2]Warehouse Wreckage</h3>
+			<h3>[3]Warehouse Wreckage</h3>
 			<p>UE5 Blueprints. In this game you must knock over as many barrels and crates as possible before the timer runs. Additionally this game is fully developed using Blueprints.<br>This video includes some gameplay:</p>
 			<video width="100%" controls>
         <source src="Warehouse Wreckage.mp4" type="video/mp4">
 			</video>
 			
 			
-			<h3>[3]ToonTanks</h3>
-			<p>UE5 C++ & Blueprints. A tank game where you must destroy the turrets or targets and avoid the enemy cannons. Once everything is destroyed you win and if not its game over.<br>This video includes some gameplay:</p>
+			<h3>[4]ToonTanks</h3>
+			<p>UE5 C++ & Blueprints. A tank game where you must destroy the turrets or targets and avoid the enemy cannons. Once everything is destroyed you win and if not its game over.<br>This video includes some code and gameplay:</p>
 			<video width="100%" controls>
         <source src="Tank Game.mp4" type="video/mp4">
 			</video>
 			
-			<h3>[4]Dapper Dasher</h3>
-			<p>C++ raylib. This game is a runner game where you must avoid the obstacles (nebula) until you reach the end of the level where it says you win. If you hit the obstacle it says game over. This game is fully developed in C++ using the raylib software development library.<br>This video includes some gameplay:</p>
+			<h3>[5]Dapper Dasher</h3>
+			<p>C++ raylib. This game is a runner game where you must avoid the obstacles (nebula) until you reach the end of the level where it says you win. If you hit the obstacle it says game over. This game is fully developed in C++ using the raylib software development library.<br>This video includes some code and gameplay:</p>
 			<video width="100%" controls>
         <source src="DapperDasher.mp4" type="video/mp4">
 			</video>
