--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p>Welcome to my Unreal Engine 5 projects page on this page you will find all the Unreal Engine 5 projects I have done so far. Feel Free to check out the video below showcasing the game.</p>
 		
 		  <h3>[1]Slash</h3>
-						<p>UE5 C++ & Blueprints. 3rd Person RPG Open World Game which includes 3rd Person Player Movement, Sword Combat, Souls, HP bar, Stamina bar, Breakable objects with treasure in it and different types of Enemies with different attributes.
+						<p>UE5 C++ & Blueprints. 3rd Person RPG Open World Game which includes 3rd Person Player Movement, Sword Combat, Souls, HP bar, Stamina bar, Breakable objects with treasure in it and different types of Enemies with different attributes. Code available on demand.
 						<br>This video includes some gameplay:</p>
 						<video width="100%" controls>
         <source src="Slash Game Showcase.mp4" type="video/mp4">
